<resources>
    <string name="app_name">AndroidLabs</string>
    <string name="insertEmail">Enter your email address:</string>
    <string name="insertPassword">Type your password:</string>
    <string name="putEmail">Type email here</string>
    <string name="loginBtn">LOGIN</string>
    <string name="Name">Your Name:</string>
    <string name="putName">Enter your Name</string>
    <string name="Profile">Your Profile</string>
    <string name="yourEmail">Your email:</string>
    <string name="inputEmail">Enter your email</string>
    <string name="Pics">Your Picture:</string>
    <string name="Picture">Click the button above to take a picture</string>
    <string name="Sendz">Send</string>
    <string name="ghost">Type here</string>
    <string name="Receivez">Receive</string>
    <string name="crButton">Go To Chat</string>
    <string name="Delete">Delete</string>
    <string name="row_msg">j</string>
    <string name="db_id">j</string>
</resources>