<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ProfileActivity">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Profile"/>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Name"/>

        <EditText
            android:inputType="textPersonName|textCapWords"
            android:id="@+id/editText"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:textSize="20sp"
            android:hint="@string/putName"/>

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/yourEmail"/>

        <EditText
            android:inputType="textEmailAddress"
            android:id="@+id/editText1"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:hint="@string/inputEmail"
            android:textSize="20dp"/>

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Pic"/>

        <ImageButton
            android:id="@+id/buttonz"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@android:drawable/picture_frame" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Picture"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
