<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChatRoomActivity">

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.6"
            android:orientation="horizontal">

            <ListView
                android:id="@+id/Chats"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:transcriptMode="normal"
                android:stackFromBottom="true"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/Send"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Sendz"/>

        <EditText
            android:id="@+id/Msgs"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.4"
            android:hint="@string/ghost"/>

        <Button
            android:id="@+id/Receive"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Receivez"/>
    </LinearLayout>
</LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>